k8s/eureka-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: oficina
  labels:
    app: eureka-server
spec:
  type: ClusterIP
  selector:
    app: eureka-server
  ports:
    - name: http
      port: 8761
      targetPort: 8761
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: oficina
  labels:
    app: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: grecomilani/oficina-eureka-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
