k8s/work-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: work-order-service
  namespace: oficina
  labels:
    app: work-order-service
spec:
  type: ClusterIP
  selector:
    app: work-order-service
  ports:
    - name: http
      port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-order-service
  namespace: oficina
  labels:
    app: work-order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: work-order-service
  template:
    metadata:
      labels:
        app: work-order-service
    spec:
      containers:
        - name: work-order-service
          image: grecomilani/oficina-work-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
